--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "chart.js": "^3.9.1",
     "vue": "^3.2.38",
+    "vue-chartjs": "^4.1.2",
     "vue-jwt-decode": "^0.1.0",
     "vue-router": "^4.1.5"
   },
