--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "vue": "^3.2.38",
     "vue-chartjs": "^4.1.2",
     "vue-jwt-decode": "^0.1.0",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.5",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.3",
