--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
+    "apexcharts": "^3.36.3",
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
     "pinia": "^2.0.24",
@@ -14,6 +15,7 @@
     "vue-chartjs": "^4.1.2",
     "vue-jwt-decode": "^0.1.0",
     "vue-router": "^4.1.5",
+    "vue3-apexcharts": "^1.4.1",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
